fix: 빌드/테스트 오류 정리
- 무엇을: 홈 패널/퀴즈/일일미션 로직 및 테스트 정합성 수정
- 왜: 컴파일/테스트 실패 및 Mockito 스텁 오류 해결
- 영향/리스크: 패널 계산/퀴즈 결과 판단이 일일미션 기준으로 통일됨